# radiuss-ci

./: .gitlab-ci.yml  .readthedocs.yml  CMakeLists.txt  COPYRIGHT  README.md
.gitlab/: concretize.yml  copy-care-packages  generate.yml  get-care  get-repo  get-spack  get-spack-care  patch-spack  print-variables  remove-repos  remove-spack
.gitlab/child/: concretize.yml
ci_template/: gitlab-ci.yml  lassen-jobs.yml  lassen-templates.yml  quartz-jobs.yml  quartz-templates.yml
docs/: CMakeLists.txt  conf.py  index.rst
docs/sphinx/: CMakeLists.txt  ci.rst  conf.py  getting_started.rst  index.rst  spack-ci.rst  templates.rst  uberenv.rst
docs/sphinx/dev_guide/: how_to.rst  index.rst  radiuss_ci_explained.rst
docs/sphinx/user_guide/: build_and_test.rst  how_to.rst  index.rst  setup_ci.rst  use_spack.rst
gitlab/ci/: concretize.yml
gitlab/doc/: lc-gitlab-pipelines.md
gitlab/umpire/: 00-child-pipeline.yml  10-quartz-template.yml  20-butte-template.yml  21-butte-jobs.yml  generate.sh  lassen-jobs.yml  lassen-template.yml  quartz-jobs.yml
patches/spack/: user-scope.patch
pipeline-generator/: rpg.py
spack-environments/care/: spack.yaml
spack-environments/care/blueos_3_ppc64le_ib_p9/: compilers.yaml  packages.yaml
spack-environments/care/toss_3_x86_64_ib/: compilers.yaml  config.yaml
spack-environments/conduit/clang_4_0_0_conduit/: compilers.yaml
spack-environments/conduit/gcc_4_9_3_conduit/: compilers.yaml  packages.yaml
spack-environments/conduit/intel_17_0_0_conduit/: packages.yaml
spack-environments/gitlab/: ci.yml
spack-environments/radiuss/: spack.yaml
spack-environments/radiuss-concretize/: spack.yaml
spack-environments/radiuss/toss_3_x86_64_ib/: packages.yaml
spack-environments/toss_3_x86_64_ib/: spack.yaml
spack-environments/toss_3_x86_64_ib/clang_4_0_0_conduit/: packages.yaml
(+42 files in other folders)
