##############################################################################
# Copyright (c) 2019-20, Lawrence Livermore National Security, LLC and RADIUSS
# project contributors. See the COPYRIGHT file for details.
#
# SPDX-License-Identifier: (MIT)
##############################################################################
if (SPHINX_FOUND)
  add_subdirectory(sphinx)
endif ()
